# ucp-schema

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  FAQ.md  Makefile  README.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  linter.yml  publish.yml  release-please.yml
fixtures/invalid/: invalid-checkout-create.json  invalid-discount-response.json  multi-extension-response.json
fixtures/valid/: discount-checkout-create.json  external-extension-response.json  valid-checkout-create.json  valid-checkout-response.json  valid-discount-response.json  valid-fulfillment-response.json
src/: compose.rs  error.rs  lib.rs  linter.rs  loader.rs  namespace.rs  resolver.rs  types.rs  validator.rs
tests/: cli_test.rs  container_test.rs  resolve_test.rs
tests/fixtures/: checkout.json
tests/fixtures/compose/: response_checkout_only.json  response_with_extensions.json
tests/fixtures/compose/schemas/shopping/: checkout.json  discount.json  fulfillment.json
tests/fixtures/invalid/: bad_annotation_type.json  unknown_visibility.json
